fixing overflows and scrollbars

--- a/res/css/layouts/catalog_section.css
+++ b/res/css/layouts/catalog_section.css
@@ -34,6 +34,7 @@
   flex-direction: row;
   align-items: center;
   gap: 5px;
+  overflow: auto;
 }
 .card .tag-list span {
   background-color: var(--green);
